--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
+    "mongoose": "^8.6.3",
     "nodemon": "^3.1.5"
   }
 }
